--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://3pod8182-service:8182;  # Имя Service в Kubernetes
+        proxy_pass http://pod8182-service:8182;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
