--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: 3pod8182
+  name: pod8182
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: 3pod8182
+      app: pod8182
   template:
     metadata:
       labels:
-        app: 3pod8182
+        app: pod8182
     spec:
       containers:
         - name: go-app
-          image: your-docker-username/3pod8182:latest
+          image: your-username/pod8182:latest
           ports:
             - containerPort: 8080
           env:
@@ -26,10 +26,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: 3pod8182-service
+  name: pod8182-service
 spec:
   selector:
-    app: 3pod8182
+    app: pod8182
   ports:
     - protocol: TCP
       port: 8182
@@ -57,7 +57,7 @@ spec:
             - containerPort: 80
           volumeMounts:
             - name: nginx-config
-              mountPath: /etc/nginx/conf.d/default.conf  # Переопределяем только этот конфиг
+              mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
       volumes:
         - name: nginx-config
@@ -74,7 +74,7 @@ data:
         listen 80;
         server_name localhost;
         location / {
-            proxy_pass http://3pod8182-service:8182;
+            proxy_pass http://pod8182-service:8182;
             proxy_set_header Host $host;
         }
     }
@@ -90,4 +90,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: NodePort  
+  type: NodePort
