--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,16 +1,14 @@
-FROM golang:1.24.4-alpine
-
+# Сборка
+FROM golang:1.24-alpine as builder
 WORKDIR /app
-
-# Копируем сначала go.mod и go.sum (если есть)
 COPY go.mod .
 RUN go mod download
+COPY . .
+RUN CGO_ENABLED=0 go build -o web-app .
 
-# Копируем остальные файлы
-COPY main.go .
-
-# Собираем приложение
-RUN go build -o web-app .
-
+# Запуск
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/web-app .
 EXPOSE 8080
 CMD ["./web-app"]
