--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: go-app
-          image: your-username/pod8182:latest
+          image: pod8182:latest  
           ports:
             - containerPort: 8080
           env:
@@ -32,62 +32,7 @@ spec:
     app: pod8182
   ports:
     - protocol: TCP
-      port: 8182
-      targetPort: 8080
-  type: ClusterIP
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-        - name: nginx
-          image: nginx:alpine
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: nginx-config
-              mountPath: /etc/nginx/conf.d/default.conf
-              subPath: default.conf
-      volumes:
-        - name: nginx-config
-          configMap:
-            name: nginx-config
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-config
-data:
-  default.conf: |
-    server {
-        listen 80;
-        server_name localhost;
-        location / {
-            proxy_pass http://pod8182-service:8182;
-            proxy_set_header Host $host;
-        }
-    }
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8182      # Внутренний порт сервиса (ClusterIP)
+      targetPort: 8080 # Порт контейнера (из Deployment)
+      nodePort: 30080  # Порт для доступа снаружи (NodePort, диапазон 30000-32767)
   type: NodePort
