--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,9 +1,11 @@
 # Сборка
-FROM golang:1.24-alpine as builder
+FROM golang:1.24-alpine AS builder
 WORKDIR /app
-COPY go.mod .
+# Копируем go.mod из корня проекта
+COPY ../go.mod .
 RUN go mod download
-COPY . .
+# Копируем main.go из docker/app
+COPY ./docker/app/main.go .
 RUN CGO_ENABLED=0 go build -o web-app .
 
 # Запуск
