изменил на полный путь image

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: go-app
-          image: pod8182:latest  
+          image: ghcr.io/clerikc/3pod8182:latest  
           ports:
             - containerPort: 8080
           env:
